Added comments for example use cases

--- a/docs/examples/Multiple_Runs_Interface_Use_Case_Example.ipynb
+++ b/docs/examples/Multiple_Runs_Interface_Use_Case_Example.ipynb
@@ -58,6 +58,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a578f2ab",
+   "metadata": {},
+   "source": [
+    "# Multiple Runs Interface Usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2251a923",
+   "metadata": {},
+   "source": [
+    "In this example, we are going to audit 4 models for stability and fairness, vesualize metrics, and create an analysis report. To get better analysis accuracy, we will use `compute_metrics_multiple_runs` interface that will make multiple runs per model. For that, we will need to do next steps:\n",
+    "\n",
+    "* Initialize input variables\n",
+    "\n",
+    "* Compute subgroup metrics\n",
+    "\n",
+    "* Make group metrics composition\n",
+    "\n",
+    "* Create metrics visualizations and a report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "606df34d",
    "metadata": {},
    "source": [
@@ -66,12 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 180,
    "id": "7a9241de",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "from datetime import datetime, timezone\n",
     "\n",
     "from xgboost import XGBClassifier\n",
@@ -79,102 +104,104 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "from source.user_interfaces.metrics_computation_interfaces import compute_metrics_multiple_runs\n",
     "from source.utils.custom_initializers import create_config_obj, read_model_metric_dfs\n",
-    "from source.custom_classes.data_loaders import CompasWithoutSensitiveAttrsDataset\n",
     "from source.custom_classes.metrics_visualizer import MetricsVisualizer\n",
     "from source.custom_classes.metrics_composer import MetricsComposer\n",
-    "from source.user_interfaces.metrics_computation_interfaces import compute_metrics_multiple_runs"
+    "from source.custom_classes.base_dataset import BaseDataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "95f15603",
+   "id": "75699f5f",
    "metadata": {},
    "source": [
-    "## Create a config object"
+    "## Initialize Input Variables"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 159,
-   "id": "61860fd1",
+   "cell_type": "markdown",
+   "id": "e86f6556",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ROOT_DIR = os.path.join('docs', 'examples')\n",
-    "config_yaml_path = os.path.join(ROOT_DIR, 'experiment_compas_config.yaml')\n",
-    "config_yaml_content = \"\"\"\n",
-    "dataset_name: COMPAS_Without_Sensitive_Attributes\n",
-    "test_set_fraction: 0.2\n",
-    "bootstrap_fraction: 0.8\n",
-    "n_estimators: 100\n",
-    "runs_seed_lst: [100, 200, 300, 400, 500, 600]\n",
-    "sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}\n",
-    "\"\"\"\n",
+    "Based on the library flow, we need to create 3 input objects for a user interface:\n",
     "\n",
-    "with open(config_yaml_path, 'w', encoding='utf-8') as f:\n",
-    "    f.write(config_yaml_content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "id": "71d8f24a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = create_config_obj(config_yaml_path=config_yaml_path)\n",
-    "# TODO: delete 'results' before this notebook execution\n",
-    "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results',\n",
-    "                                     f'{config.dataset_name}_Metrics_{datetime.now(timezone.utc).strftime(\"%Y%m%d__%H%M%S\")}')"
+    "* A **dataset class** that is a wrapper above the user’s raw dataset that includes its descriptive attributes like a target column, numerical columns, categorical columns, etc. This class must be inherited from the BaseDataset class, which was created for user convenience.\n",
+    "\n",
+    "* A **config yaml** that is a file with configuration parameters for different user interfaces for metrics computation.\n",
+    "\n",
+    "* Finally, a **models config** that is a Python dictionary, where keys are model names and values are initialized models for analysis. This dictionary helps conduct audits of multiple models for one or multiple runs and analyze different types of models."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d42b81d1",
+   "id": "74f57422",
    "metadata": {},
    "source": [
-    "## Create a models config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "id": "b995b73b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models_config = {\n",
-    "    'DecisionTreeClassifier': DecisionTreeClassifier(criterion='gini',\n",
-    "                                                     max_depth=20,\n",
-    "                                                     max_features=0.6,\n",
-    "                                                     min_samples_split=0.1),\n",
-    "    'LogisticRegression': LogisticRegression(C=1,\n",
-    "                                             max_iter=50,\n",
-    "                                             penalty='l2',\n",
-    "                                             solver='newton-cg'),\n",
-    "    'RandomForestClassifier': RandomForestClassifier(max_depth=4,\n",
-    "                                                     max_features=0.6,\n",
-    "                                                     min_samples_leaf=1,\n",
-    "                                                     n_estimators=50),\n",
-    "    'XGBClassifier': XGBClassifier(learning_rate=0.1,\n",
-    "                                   max_depth=5,\n",
-    "                                   n_estimators=20),\n",
-    "}"
+    "### Create a Dataset class"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c60057a",
+   "id": "eed149cd",
    "metadata": {},
    "source": [
-    "## Create a Dataset class"
+    "Based on the BaseDataset class, your **dataset class** should include the following attributes:\n",
+    "* **Obligatory attributes**: dataset, target, features, numerical_columns, categorical_columns\n",
+    "\n",
+    "* **Optional attributes**: X_data, y_data, columns_with_nulls\n",
+    "\n",
+    "For more details, please refer to library documentation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "3e53fe9a",
+   "execution_count": 181,
+   "id": "9e3d7bf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CompasWithoutSensitiveAttrsDataset(BaseDataset):\n",
+    "    \"\"\"\n",
+    "    Dataset class for COMPAS dataset that does not contain sensitive attributes among feature columns\n",
+    "     to test blind classifiers\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataset_path\n",
+    "        Path to a dataset file\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def __init__(self, dataset_path: str):\n",
+    "        # Read a dataset\n",
+    "        df = pd.read_csv(dataset_path)\n",
+    "\n",
+    "        # Initial data types transformation\n",
+    "        int_columns = ['recidivism', 'age', 'age_cat_25 - 45', 'age_cat_Greater than 45',\n",
+    "                       'age_cat_Less than 25', 'c_charge_degree_F', 'c_charge_degree_M', 'sex']\n",
+    "        int_columns_dct = {col: \"int\" for col in int_columns}\n",
+    "        df = df.astype(int_columns_dct)\n",
+    "\n",
+    "        # Define params\n",
+    "        target = 'recidivism'\n",
+    "        numerical_columns = ['juv_fel_count', 'juv_misd_count', 'juv_other_count','priors_count']\n",
+    "        categorical_columns = ['age_cat_25 - 45', 'age_cat_Greater than 45','age_cat_Less than 25',\n",
+    "                                    'c_charge_degree_F', 'c_charge_degree_M']\n",
+    "        features = numerical_columns + categorical_columns\n",
+    "\n",
+    "        super().__init__(\n",
+    "            pandas_df=df,\n",
+    "            features=features,\n",
+    "            target=target,\n",
+    "            numerical_columns=numerical_columns,\n",
+    "            categorical_columns=categorical_columns\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "6c55c6a0",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +324,7 @@
        "4                  1                  0  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,6 +332,111 @@
    "source": [
     "dataset = CompasWithoutSensitiveAttrsDataset(dataset_path='data/COMPAS.csv')\n",
     "dataset.X_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f15603",
+   "metadata": {},
+   "source": [
+    "### Create a config object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4c2a2a9",
+   "metadata": {},
+   "source": [
+    "`compute_metrics_multiple_runs` interface requires that your **yaml file** includes the following parameters:\n",
+    "\n",
+    "* **dataset_name**: a name of your dataset; it will be used for result files naming.\n",
+    "\n",
+    "* **test_set_fraction**: the fraction from the whole dataset in range [0.0 - 1.0] to create a test set.\n",
+    "\n",
+    "* **bootstrap_fraction**: the fraction from a train set in range [0.0 - 1.0] to fit models in bootstrap (usually more than 0.5).\n",
+    "\n",
+    "* **n_estimators**: the number of estimators for bootstrap to compute subgroup variance metrics.\n",
+    "\n",
+    "* **runs_seed_lst**: a list of seeds for each run; the number of runs is derived based on the length of this list. For example, if your runs_seed_lst is [100, 200], this means that for the first run the interface will use 100 seed, and the code logic will increment this seed for each model (101 for the first model in models_config, 102 for the second model, etc.).\n",
+    "\n",
+    "* **sensitive_attributes_dct**: a dictionary where keys are sensitive attribute names (including attribute intersections), and values are privileged values for these attributes. Currently, the library supports only intersections among two sensitive attributes. Intersectional attributes must include '&' between sensitive attributes. You do not need to specify priviliged values for intersectional groups since they will be derived from privileged values for each separate sensitive attribute in this intersectional pair.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "61860fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_DIR = os.path.join('docs', 'examples')\n",
+    "config_yaml_path = os.path.join(ROOT_DIR, 'experiment_compas_config.yaml')\n",
+    "config_yaml_content = \"\"\"\n",
+    "dataset_name: COMPAS_Without_Sensitive_Attributes\n",
+    "test_set_fraction: 0.2\n",
+    "bootstrap_fraction: 0.8\n",
+    "n_estimators: 100\n",
+    "runs_seed_lst: [100, 200, 300, 400, 500, 600]\n",
+    "sensitive_attributes_dct: {'sex': 0, 'race': 'Caucasian', 'sex&race': None}\n",
+    "\"\"\"\n",
+    "\n",
+    "with open(config_yaml_path, 'w', encoding='utf-8') as f:\n",
+    "    f.write(config_yaml_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "71d8f24a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = create_config_obj(config_yaml_path=config_yaml_path)\n",
+    "# TODO: delete 'results' before this notebook execution\n",
+    "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results',\n",
+    "                                     f'{config.dataset_name}_Metrics_{datetime.now(timezone.utc).strftime(\"%Y%m%d__%H%M%S\")}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d42b81d1",
+   "metadata": {},
+   "source": [
+    "### Create a models config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3deeecfa",
+   "metadata": {},
+   "source": [
+    "**models_config** that is a Python dictionary, where keys are model names and values are initialized models for analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "b995b73b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models_config = {\n",
+    "    'DecisionTreeClassifier': DecisionTreeClassifier(criterion='gini',\n",
+    "                                                     max_depth=20,\n",
+    "                                                     max_features=0.6,\n",
+    "                                                     min_samples_split=0.1),\n",
+    "    'LogisticRegression': LogisticRegression(C=1,\n",
+    "                                             max_iter=50,\n",
+    "                                             penalty='l2',\n",
+    "                                             solver='newton-cg'),\n",
+    "    'RandomForestClassifier': RandomForestClassifier(max_depth=4,\n",
+    "                                                     max_features=0.6,\n",
+    "                                                     min_samples_leaf=1,\n",
+    "                                                     n_estimators=50),\n",
+    "    'XGBClassifier': XGBClassifier(learning_rate=0.1,\n",
+    "                                   max_depth=5,\n",
+    "                                   n_estimators=20),\n",
+    "}"
    ]
   },
   {
@@ -320,7 +452,7 @@
    "id": "c3530f06",
    "metadata": {},
    "source": [
-    "## Get metrics for a list of models with a run_metrics_computation_with_config interface and input arguments as a config"
+    "After the variables are input to a user interface, the interface creates a **generic pipeline** based on the input dataset class to hide preprocessing complexity and provide handy attributes and methods for different types of model analysis. Later this generic pipeline is used in subgroup analyzers that compute different sets of metrics. As for now, our library supports **Subgroup Variance Analyzer** and **Subgroup Statistical Bias Analyzer**, but it is easily extensible to any other analyzers. When the variance and bias analyzers complete metrics computation, their metrics are combined, returned in a matrix format, and stored in a file if defined."
    ]
   },
   {
@@ -1741,6 +1873,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6a8625a",
+   "metadata": {},
+   "source": [
+    "Look at top rows of computed metrics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 164,
    "id": "bea94683",
@@ -2129,6 +2269,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "274c97e2",
+   "metadata": {},
+   "source": [
+    "**Metrics Composer** is responsible for this second stage of the model audit. Currently, it computes our custom group statistical bias and variance metrics, but extending it for new group metrics is very simple. We noticed that more and more group metrics have appeared during the last decade, but most of them are based on the same subgroup metrics. Hence, such a separation of subgroup and group metrics computation allows one to experiment with different combinations of subgroup metrics and avoid subgroup metrics recomputation for a new set of grouped metrics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 165,
    "id": "f94a20dc",
@@ -2149,6 +2297,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1a23ece",
+   "metadata": {},
+   "source": [
+    "Compute composed metrics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 167,
    "id": "be6ace22",
@@ -2163,7 +2319,15 @@
    "id": "deb45226",
    "metadata": {},
    "source": [
-    "## Metrics Visualizations and Reporting"
+    "## Metrics Visualization and Reporting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f5d4cdb",
+   "metadata": {},
+   "source": [
+    "**Metrics Visualizer** provides metrics visualization and reporting functionality. It unifies different preprocessing methods for result metrics and creates various data formats required for visualizations. Hence, users can simply call methods of the Metrics Visualizer class and get custom plots for diverse metrics analysis. Additionally, these plots could be collected in an HTML report with comments for user convenience and future reference."
    ]
   },
   {
@@ -2226,9 +2390,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21f9cd9c",
+   "metadata": {},
+   "source": [
+    "Example of an interactive plot. It requires that you run the below cell in Jupyter in the browser.\n",
+    "\n",
+    "You can use this plot to compare any pair of bias and variance metrics for all models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "f2a12507",
+   "id": "1a127a11",
    "metadata": {},
    "outputs": [
     {
@@ -2301,6 +2475,14 @@
    ],
    "source": [
     "visualizer.create_bias_variance_interactive_bar_chart()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55e6ce42",
+   "metadata": {},
+   "source": [
+    "Create an analysis report. It includes correspondent visualizations and explanations for your result metrics."
    ]
   },
   {
