--- a/docs/examples/Multiple_Runs_Interface_Use_Case_Example.ipynb
+++ b/docs/examples/Multiple_Runs_Interface_Use_Case_Example.ipynb
@@ -69,7 +69,7 @@
    "id": "2251a923",
    "metadata": {},
    "source": [
-    "In this example, we are going to audit 4 models for stability and fairness, vesualize metrics, and create an analysis report. To get better analysis accuracy, we will use `compute_metrics_multiple_runs` interface that will make multiple runs per model. For that, we will need to do next steps:\n",
+    "In this example, we are going to audit 4 models for stability and fairness, visualize metrics, and create an analysis report. To get better analysis accuracy, we will use `compute_metrics_multiple_runs` interface that will make multiple runs per model. For that, we will need to do next steps:\n",
     "\n",
     "* Initialize input variables\n",
     "\n",
@@ -77,7 +77,7 @@
     "\n",
     "* Make group metrics composition\n",
     "\n",
-    "* Create metrics visualizations and a report"
+    "* Create metrics visualizations and an analysis report"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "\n",
     "* **Optional attributes**: X_data, y_data, columns_with_nulls\n",
     "\n",
-    "For more details, please refer to library documentation."
+    "For more details, please refer to the library documentation."
    ]
   },
   {
@@ -349,17 +349,17 @@
    "source": [
     "`compute_metrics_multiple_runs` interface requires that your **yaml file** includes the following parameters:\n",
     "\n",
-    "* **dataset_name**: a name of your dataset; it will be used for result files naming.\n",
+    "* **dataset_name**: a name of your dataset; it will be used to name files with metrics.\n",
     "\n",
-    "* **test_set_fraction**: the fraction from the whole dataset in range [0.0 - 1.0] to create a test set.\n",
+    "* **test_set_fraction**: the fraction from the whole dataset in the range [0.0 - 1.0] to create a test set.\n",
     "\n",
-    "* **bootstrap_fraction**: the fraction from a train set in range [0.0 - 1.0] to fit models in bootstrap (usually more than 0.5).\n",
+    "* **bootstrap_fraction**: the fraction from a train set in the range [0.0 - 1.0] to fit models in bootstrap (usually more than 0.5).\n",
     "\n",
     "* **n_estimators**: the number of estimators for bootstrap to compute subgroup variance metrics.\n",
     "\n",
-    "* **runs_seed_lst**: a list of seeds for each run; the number of runs is derived based on the length of this list. For example, if your runs_seed_lst is [100, 200], this means that for the first run the interface will use 100 seed, and the code logic will increment this seed for each model (101 for the first model in models_config, 102 for the second model, etc.).\n",
+    "* **runs_seed_lst**: a list of seeds for each run; the number of runs is derived based on the length of this list. For example, if your runs_seed_lst is [100, 200], this means that for the first run, the interface will use 100 seed, and the code logic will increment this seed for each model (101 for the first model in models_config, 102 for the second model, etc.).\n",
     "\n",
-    "* **sensitive_attributes_dct**: a dictionary where keys are sensitive attribute names (including attribute intersections), and values are privileged values for these attributes. Currently, the library supports only intersections among two sensitive attributes. Intersectional attributes must include '&' between sensitive attributes. You do not need to specify priviliged values for intersectional groups since they will be derived from privileged values for each separate sensitive attribute in this intersectional pair.\n"
+    "* **sensitive_attributes_dct**: a dictionary where keys are sensitive attribute names (including attribute intersections), and values are privileged values for these attributes. Currently, the library supports only intersections among two sensitive attributes. Intersectional attributes must include '&' between sensitive attributes. You do not need to specify privileged values for intersectional groups since they will be derived from privileged values in sensitive_attributes_dct for each separate sensitive attribute in this intersectional pair.\n"
    ]
   },
   {
@@ -410,7 +410,7 @@
    "id": "3deeecfa",
    "metadata": {},
    "source": [
-    "**models_config** that is a Python dictionary, where keys are model names and values are initialized models for analysis"
+    "**models_config** is a Python dictionary, where keys are model names and values are initialized models for analysis"
    ]
   },
   {
@@ -2394,7 +2394,7 @@
    "id": "21f9cd9c",
    "metadata": {},
    "source": [
-    "Example of an interactive plot. It requires that you run the below cell in Jupyter in the browser.\n",
+    "Below is an example of an interactive plot. It requires that you run the below cell in Jupyter in the browser.\n",
     "\n",
     "You can use this plot to compare any pair of bias and variance metrics for all models."
    ]
