--- a/notebooks/data_processing/Multiple_Runs_Interface_With_DB_Writer.ipynb
+++ b/notebooks/data_processing/Multiple_Runs_Interface_With_DB_Writer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b2453b09",
+   "id": "0bb7108d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b42df735",
+   "id": "ef830215",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "240709d9",
+   "id": "68ae1475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "77eb0698",
+   "id": "9a1a7163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c941714",
+   "id": "3dd0d321",
    "metadata": {},
    "source": [
     "# Multiple Runs Interface Usage Wit DB Writer"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "319edf42",
+   "id": "8b3e85da",
    "metadata": {},
    "source": [
     "In this example, we are going to audit 4 models for stability and fairness, visualize metrics, and create an analysis report. To get better analysis accuracy, we will use `compute_metrics_multiple_runs` interface that will make multiple runs per model. For that, we will need to do the next steps:\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d8747db",
+   "id": "ae19ca31",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2628108b",
+   "id": "dec1f3f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c3e6bf",
+   "id": "ae7d088c",
    "metadata": {},
    "source": [
     "## Initialize Input Variables"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7d53fa",
+   "id": "bb167839",
    "metadata": {},
    "source": [
     "Based on the library flow, we need to create 3 input objects for a user interface:\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48797fac",
+   "id": "4b21d920",
    "metadata": {},
    "source": [
     "### Create a Dataset class"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30a348a9",
+   "id": "57b42644",
    "metadata": {},
    "source": [
     "Based on the BaseDataset class, your **dataset class** should include the following attributes:\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0d7d5fa4",
+   "id": "6269fb46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b5e92914",
+   "id": "30a74059",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf0d77e",
+   "id": "d22f31eb",
    "metadata": {},
    "source": [
     "### Create a config object"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf57f6f3",
+   "id": "2ab8dda3",
    "metadata": {},
    "source": [
     "`compute_metrics_multiple_runs` interface requires that your **yaml file** includes the following parameters:\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a79911b0",
+   "id": "79dcac74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ede942d",
+   "id": "abc8bd6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a637cff7",
+   "id": "f04867aa",
    "metadata": {},
    "source": [
     "### Create a models config"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6884870",
+   "id": "faee85f0",
    "metadata": {},
    "source": [
     "**models_config** is a Python dictionary, where keys are model names and values are initialized models for analysis"
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "acdd268e",
+   "id": "a711e1af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75774cb0",
+   "id": "2d6ba72b",
    "metadata": {},
    "source": [
     "## Subgroup Metrics Computation"
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725ae83e",
+   "id": "13404bc0",
    "metadata": {},
    "source": [
     "After the variables are input to a user interface, the interface creates a **generic pipeline** based on the input dataset class to hide preprocessing complexity and provide handy attributes and methods for different types of model analysis. Later this generic pipeline is used in subgroup analyzers that compute different sets of metrics. As for now, our library supports **Subgroup Variance Analyzer** and **Subgroup Statistical Bias Analyzer**, but it is easily extensible to any other analyzers. When the variance and bias analyzers complete metrics computation, their metrics are combined, returned in a matrix format, and stored in a file if defined."
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4c303e60",
+   "id": "899e6ab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4c164a39",
+   "id": "db8df420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,13 +455,14 @@
     "custom_table_fields_dct = {\n",
     "    'session_uuid': str(uuid.uuid4()),\n",
     "    'preprocessing_techniques': 'get_dummies and scaler',\n",
-    "}"
+    "}\n",
+    "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2baf7b8a",
+   "id": "46961cf7",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a66149bd",
+   "id": "dc7f4546",
    "metadata": {},
    "source": [
     "Look at several columns in top rows of computed metrics"
@@ -568,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b3f6186b",
+   "id": "d030be0d",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a818f9e",
+   "id": "205e6af1",
    "metadata": {},
    "source": [
     "## Group Metrics Composition"
@@ -829,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56cf442f",
+   "id": "fd9f9226",
    "metadata": {},
    "source": [
     "**Metrics Composer** is responsible for this second stage of the model audit. Currently, it computes our custom group statistical bias and variance metrics, but extending it for new group metrics is very simple. We noticed that more and more group metrics have appeared during the last decade, but most of them are based on the same subgroup metrics. Hence, such a separation of subgroup and group metrics computation allows one to experiment with different combinations of subgroup metrics and avoid subgroup metrics recomputation for a new set of grouped metrics."
@@ -838,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "59e7c822",
+   "id": "180f429c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7f75a89c",
+   "id": "64a38bb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "78fc5077",
+   "id": "1c72325e",
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "436edf35",
+   "id": "b30c703c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d91876",
+   "id": "b466fdfb",
    "metadata": {},
    "source": [
     "Compute composed metrics"
@@ -1480,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f01745d5",
+   "id": "896f7906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1489,7 +1490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6924dc84",
+   "id": "901da0dd",
    "metadata": {},
    "source": [
     "## Metrics Visualization and Reporting"
@@ -1497,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "582d948d",
+   "id": "ad26d847",
    "metadata": {},
    "source": [
     "**Metrics Visualizer** provides metrics visualization and reporting functionality. It unifies different preprocessing methods for result metrics and creates various data formats required for visualizations. Hence, users can simply call methods of the Metrics Visualizer class and get custom plots for diverse metrics analysis. Additionally, these plots could be collected in an HTML report with comments for user convenience and future reference."
@@ -1506,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4799a255",
+   "id": "de09882f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4f816f68",
+   "id": "69055c3a",
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "27ab3ce5",
+   "id": "0d29adad",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8d238939",
+   "id": "ed6a0671",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e1d3ea",
+   "id": "9cba9334",
    "metadata": {},
    "source": [
     "Below is an example of an interactive plot. It requires that you run the below cell in Jupyter in the browser or EDAs, which support JavaScript displaying.\n",
@@ -1712,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8e791c1a",
+   "id": "9c595f71",
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1791,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c105d38e",
+   "id": "dee49825",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b560cc6d",
+   "id": "41669cf9",
    "metadata": {},
    "source": [
     "Create an analysis report. It includes correspondent visualizations and details about your result metrics."
@@ -1845,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ab2bf17d",
+   "id": "9e73354b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1856,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c72870d4",
+   "id": "e980f1e6",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d72997",
+   "id": "a94b000c",
    "metadata": {},
    "outputs": [],
    "source": []
