Added null utils

--- a/notebooks/data_processing/Credit_With_Null_Imputer.ipynb
+++ b/notebooks/data_processing/Credit_With_Null_Imputer.ipynb
@@ -117,7 +117,8 @@
     "from virny.custom_classes.base_dataset import CustomSplitsDataset\n",
     "from virny.configs.constants import ReportType\n",
     "\n",
-    "from data.data_loaders import CreditDataset"
+    "from data.data_loaders import CreditDataset\n",
+    "from source.db_functions import connect_to_mongodb"
    ]
   },
   {
@@ -428,24 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "from pymongo import MongoClient\n",
-    "\n",
-    "\n",
-    "load_dotenv(os.path.join('..', 'secrets.env'))  # Take environment variables from .env\n",
-    "\n",
-    "# Provide the mongodb atlas url to connect python to mongodb using pymongo\n",
-    "CONNECTION_STRING = os.getenv(\"CONNECTION_STRING\")\n",
-    "# Create a connection using MongoClient. You can import MongoClient or use pymongo.MongoClient\n",
-    "client = MongoClient(CONNECTION_STRING)\n",
-    "collection = client[os.getenv(\"DB_NAME\")]['preprocessing_results']\n",
-    "\n",
-    "\n",
-    "def db_writer_func(run_models_metrics_df, collection=collection):\n",
-    "    # Rename Pandas columns to lower case\n",
-    "    run_models_metrics_df.columns = run_models_metrics_df.columns.str.lower()\n",
-    "    collection.insert_many(run_models_metrics_df.to_dict('records'))"
+    "client, collection, db_writer_func = connect_to_mongodb()"
    ]
   },
   {
