--- a/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
+++ b/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
@@ -86,17 +86,21 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import copy\n",
     "\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "from virny.utils.custom_initializers import create_config_obj\n",
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
     "from source.preprocessing import get_null_imputer_preprocessor\n",
-    "from source.experiment_interface import run_experiment"
+    "from source.experiment_interface import run_exp_iteration\n",
+    "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS"
    ]
   },
   {
@@ -112,8 +116,21 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
+    "EXPERIMENT_NAME = 'preprocessing'\n",
+    "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "data_loader = CreditDataset(subsample_size=50_000)\n",
-    "data_loader.X_data[data_loader.X_data.columns[:5]].head()"
+    "data_loader.X_data.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -147,10 +164,10 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    'session_uuid': str(uuid.uuid4()),\n",
-    "    'preprocessing_techniques': 'get_dummies and scaler',\n",
+    "    'notebook_session_uuid': str(uuid.uuid4()),\n",
+    "    'preprocessing_technique': None,\n",
     "}\n",
-    "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
+    "print('Current session uuid: ', custom_table_fields_dct['notebook_session_uuid'])"
    ],
    "metadata": {
     "collapsed": false
@@ -170,7 +187,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
     "config_yaml_path = 'experiment_config.yaml'\n",
     "age_range = [i for i in range(0, 31)]\n",
     "config_yaml_content = \\\n",
@@ -178,8 +194,7 @@
     "dataset_name: Credit\n",
     "bootstrap_fraction: 0.8\n",
     "n_estimators: 50  # Better to input the higher number of estimators than 100; this is only for this use case example\n",
-    "num_runs: 1\n",
-    "runs_seed_lst: [100]\n",
+    "num_runs: {NUM_METRICS_COMPUTATION_RUNS}\n",
     "sensitive_attributes_dct: {{'age': {age_range}}}\n",
     "\"\"\"\n",
     "\n",
@@ -252,7 +267,24 @@
     "                'max_depth': [5, 7],\n",
     "                'lambda':  [10, 100]\n",
     "            }\n",
-    "        }\n",
+    "        },\n",
+    "        # 'KNeighborsClassifier': {\n",
+    "        #     'model': KNeighborsClassifier(),\n",
+    "        #     'params': {\n",
+    "        #         'n_neighbors' : [5, 7, 9, 11, 13, 15, 25],\n",
+    "        #         'weights' : ['uniform', 'distance'],\n",
+    "        #         'metric' : ['minkowski', 'euclidean', 'manhattan']\n",
+    "        #     }\n",
+    "        # },\n",
+    "        # 'MLPClassifier': {\n",
+    "        #     'model': MLPClassifier(random_state=models_tuning_seed),\n",
+    "        #     'params': {\n",
+    "        #         'hidden_layer_sizes':[(100,), (100,100,), (100,50,100,)],\n",
+    "        #         'activation': ['logistic', 'tanh', 'relu'],\n",
+    "        #         'solver': ['lbfgs', 'sgd', 'adam'],\n",
+    "        #         'learning_rate': ['constant', 'invscaling', 'adaptive']\n",
+    "        #     }\n",
+    "        # }\n",
     "    }"
    ],
    "metadata": {
@@ -269,13 +301,26 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 1"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "experiment_seed = 123\n",
-    "preprocessor = get_null_imputer_preprocessor(data_loader)\n",
-    "save_results_dir_path = os.path.join(ROOT_DIR, 'results')\n",
+    "# Configs for an experiment iteration\n",
+    "exp_iter_num = 1\n",
+    "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
+    "custom_table_fields_dct['preprocessing_technique'] = 'cat: mode, num: median'\n",
+    "custom_table_fields_dct['experiment_iteration'] = exp_iter_num\n",
+    "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)\n",
     "models_params_for_tuning = get_models_params_for_tuning(experiment_seed)"
    ],
    "metadata": {
@@ -289,15 +334,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multiple_run_metrics_dct = run_experiment(data_loader=data_loader,\n",
-    "                                          experiment_seed=experiment_seed,\n",
-    "                                          preprocessor=preprocessor,\n",
-    "                                          models_params_for_tuning=models_params_for_tuning,\n",
-    "                                          metrics_computation_config=metrics_computation_config,\n",
-    "                                          custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                          with_tuning=True,\n",
-    "                                          save_results_dir_path=save_results_dir_path,\n",
-    "                                          tuned_params_df_path=None)"
+    "multiple_run_metrics_dct = run_exp_iteration(data_loader=exp_iter_data_loader,\n",
+    "                                             experiment_seed=experiment_seed,\n",
+    "                                             preprocessor=preprocessor,\n",
+    "                                             models_params_for_tuning=models_params_for_tuning,\n",
+    "                                             metrics_computation_config=metrics_computation_config,\n",
+    "                                             custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                             with_tuning=True,\n",
+    "                                             save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                             tuned_params_df_path=None)"
    ]
   },
   {
@@ -307,6 +352,15 @@
    "source": [
     "sample_model_metrics_df = multiple_run_metrics_dct[list(models_params_for_tuning.keys())[0]]\n",
     "sample_model_metrics_df.head(20)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Experiment iteration 2"
    ],
    "metadata": {
     "collapsed": false
