Save results for the full Credit dataset

--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Folktables_GA_2018.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Folktables_GA_2018.ipynb
@@ -489,8 +489,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Multiple runs progress:   0%|\u001b[32m          \u001b[0m| 0/2 [00:00<?, ?it/s]\n",
-      "Analyze models in one run:   0%|\u001b[31m          \u001b[0m| 0/2 [00:00<?, ?it/s]\u001b[A"
+      "Multiple runs progress:   0%|\u001B[32m          \u001B[0m| 0/2 [00:00<?, ?it/s]\n",
+      "Analyze models in one run:   0%|\u001B[31m          \u001B[0m| 0/2 [00:00<?, ?it/s]\u001B[A"
      ]
     },
     {
@@ -512,7 +512,7 @@
       "2023-01-31 22:49:01 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001b[34m██████████\u001b[0m| 100/100 [00:03<00:00, 31.99it/s]"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:03<00:00, 31.99it/s]"
      ]
     },
     {
@@ -531,7 +531,7 @@
       "2023-01-31 22:49:04 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
       "2023-01-31 22:49:13 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run:  50%|\u001b[31m█████     \u001b[0m| 1/2 [00:33<00:33, 33.67s/it]\u001b[A"
+      "Analyze models in one run:  50%|\u001B[31m█████     \u001B[0m| 1/2 [00:33<00:33, 33.67s/it]\u001B[A"
      ]
     },
     {
@@ -557,15 +557,15 @@
       "2023-01-31 22:49:35 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap:   0%|\u001b[34m          \u001b[0m| 0/100 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:   0%|\u001B[34m          \u001B[0m| 0/100 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  23%|\u001b[34m██▎       \u001b[0m| 23/100 [00:10<00:33,  2.27it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  23%|\u001B[34m██▎       \u001B[0m| 23/100 [00:10<00:33,  2.27it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  46%|\u001b[34m████▌     \u001b[0m| 46/100 [00:20<00:23,  2.27it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  46%|\u001B[34m████▌     \u001B[0m| 46/100 [00:20<00:23,  2.27it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  69%|\u001b[34m██████▉   \u001b[0m| 69/100 [00:33<00:15,  1.99it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  69%|\u001B[34m██████▉   \u001B[0m| 69/100 [00:33<00:15,  1.99it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001b[34m██████████\u001b[0m| 100/100 [00:48<00:00,  2.08it/s][A\u001b[A"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:48<00:00,  2.08it/s][A\u001B[A"
      ]
     },
     {
@@ -584,8 +584,8 @@
       "2023-01-31 22:50:23 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
       "2023-01-31 22:50:33 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run: 100%|\u001b[31m██████████\u001b[0m| 2/2 [01:54<00:00, 57.43s/it]\u001b[A\n",
-      "Multiple runs progress:  50%|\u001b[32m█████     \u001b[0m| 1/2 [01:54<01:54, 114.87s/it]"
+      "Analyze models in one run: 100%|\u001B[31m██████████\u001B[0m| 2/2 [01:54<00:00, 57.43s/it]\u001B[A\n",
+      "Multiple runs progress:  50%|\u001B[32m█████     \u001B[0m| 1/2 [01:54<01:54, 114.87s/it]"
      ]
     },
     {
@@ -603,7 +603,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Analyze models in one run:   0%|\u001b[31m          \u001b[0m| 0/2 [00:00<?, ?it/s]\u001b[A"
+      "Analyze models in one run:   0%|\u001B[31m          \u001B[0m| 0/2 [00:00<?, ?it/s]\u001B[A"
      ]
     },
     {
@@ -625,7 +625,7 @@
       "2023-01-31 22:50:56 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001b[34m██████████\u001b[0m| 100/100 [00:03<00:00, 32.61it/s]"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:03<00:00, 32.61it/s]"
      ]
     },
     {
@@ -644,7 +644,7 @@
       "2023-01-31 22:50:59 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
       "2023-01-31 22:51:10 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run:  50%|\u001b[31m█████     \u001b[0m| 1/2 [00:38<00:38, 38.81s/it]\u001b[A"
+      "Analyze models in one run:  50%|\u001B[31m█████     \u001B[0m| 1/2 [00:38<00:38, 38.81s/it]\u001B[A"
      ]
     },
     {
@@ -670,19 +670,19 @@
       "2023-01-31 22:51:35 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap:   0%|\u001b[34m          \u001b[0m| 0/100 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:   0%|\u001B[34m          \u001B[0m| 0/100 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  24%|\u001b[34m██▍       \u001b[0m| 24/100 [00:10<00:31,  2.38it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  24%|\u001B[34m██▍       \u001B[0m| 24/100 [00:10<00:31,  2.38it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  48%|\u001b[34m████▊     \u001b[0m| 48/100 [00:24<00:27,  1.90it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  48%|\u001B[34m████▊     \u001B[0m| 48/100 [00:24<00:27,  1.90it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  48%|\u001b[34m████▊     \u001b[0m| 48/100 [00:35<00:27,  1.90it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  48%|\u001B[34m████▊     \u001B[0m| 48/100 [00:35<00:27,  1.90it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  64%|\u001b[34m██████▍   \u001b[0m| 64/100 [00:35<00:21,  1.70it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  64%|\u001B[34m██████▍   \u001B[0m| 64/100 [00:35<00:21,  1.70it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap:  79%|\u001b[34m███████▉  \u001b[0m| 79/100 [00:46<00:13,  1.56it/s]\u001b[A\u001b[A\n",
+      "Classifiers testing by bootstrap:  79%|\u001B[34m███████▉  \u001B[0m| 79/100 [00:46<00:13,  1.56it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001b[34m██████████\u001b[0m| 100/100 [01:00<00:00,  1.66it/s][A\u001b[A"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [01:00<00:00,  1.66it/s][A\u001B[A"
      ]
     },
     {
@@ -701,8 +701,8 @@
       "2023-01-31 22:52:35 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
       "2023-01-31 22:52:46 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run: 100%|\u001b[31m██████████\u001b[0m| 2/2 [02:21<00:00, 70.81s/it]\u001b[A\n",
-      "Multiple runs progress: 100%|\u001b[32m██████████\u001b[0m| 2/2 [04:16<00:00, 128.25s/it]"
+      "Analyze models in one run: 100%|\u001B[31m██████████\u001B[0m| 2/2 [02:21<00:00, 70.81s/it]\u001B[A\n",
+      "Multiple runs progress: 100%|\u001B[32m██████████\u001B[0m| 2/2 [04:16<00:00, 128.25s/it]"
      ]
     },
     {
