Added template for mislabels generators

--- a/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
+++ b/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
@@ -744,6 +744,7 @@
    "source": [
     "multiple_run_metrics_dct = run_exp_iteration(data_loader=exp_iter_data_loader,\n",
     "                                             experiment_seed=experiment_seed,\n",
+    "                                             db_collection_name='preprocessing_results',\n",
     "                                             preprocessor=preprocessor,\n",
     "                                             models_params_for_tuning=models_params_for_tuning,\n",
     "                                             metrics_computation_config=metrics_computation_config,\n",
