Added a structure for the framework

--- a/notebooks/mislabels/Credit_With_Mislabels.ipynb
+++ b/notebooks/mislabels/Credit_With_Mislabels.ipynb
@@ -106,10 +106,10 @@
     "from virny.utils.custom_initializers import create_config_obj\n",
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
-    "from source.generators.measuring import MislabelsGenerator\n",
-    "from source.preprocessing import get_null_imputer_preprocessor\n",
-    "from source.experiment_interface import run_exp_iteration\n",
-    "from source.custom_initializers import create_experiment_data_loader\n",
+    "from source.error_injectors.measuring import MislabelsGenerator\n",
+    "from source.user_interfaces.experiment_interface import run_exp_iteration\n",
+    "from source.utils.custom_initializers import create_experiment_data_loader\n",
+    "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor\n",
     "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS"
    ]
   },
