--- a/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
+++ b/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
@@ -98,11 +98,11 @@
     "from virny.utils.custom_initializers import create_config_obj\n",
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
-    "from source.experiment_interface import run_exp_iteration\n",
-    "from source.preprocessing import get_null_imputer_preprocessor\n",
-    "from source.generators.preprocessing import RandomNullsGenerator\n",
-    "from source.custom_initializers import create_experiment_data_loader\n",
-    "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS"
+    "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS, TEST_SET_FRACTION\n",
+    "from source.error_injectors.measuring import RandomNullsGenerator\n",
+    "from source.user_interfaces.experiment_interface import run_exp_iteration\n",
+    "from source.utils.custom_initializers import create_experiment_data_loader\n",
+    "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor"
    ]
   },
   {
@@ -120,6 +120,7 @@
    "source": [
     "ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
     "EXPERIMENT_NAME = 'preprocessing'\n",
+    "DB_COLLECTION_NAME = 'preprocessing_results'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)"
    ],
    "metadata": {
@@ -172,6 +173,19 @@
    "cell_type": "markdown",
    "source": [
     "### Define a db writer and custom fields to insert into your database"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from source.db_functions import connect_to_mongodb\n",
+    "\n",
+    "client, _, db_writer_func = connect_to_mongodb(DB_COLLECTION_NAME)"
    ],
    "metadata": {
     "collapsed": false
@@ -515,7 +529,8 @@
    "source": [
     "multiple_run_metrics_dct = run_exp_iteration(data_loader=exp_iter_data_loader,\n",
     "                                             experiment_seed=experiment_seed,\n",
-    "                                             db_collection_name='preprocessing_results',\n",
+    "                                             test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                             db_writer_func=db_writer_func,\n",
     "                                             preprocessor=preprocessor,\n",
     "                                             models_params_for_tuning=models_params_for_tuning,\n",
     "                                             metrics_computation_config=metrics_computation_config,\n",
@@ -559,6 +574,26 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "client.close()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
