Splitted error injectors into separate files

--- a/notebooks/diff_proportions/Compas_With_Diff_Proportions.ipynb
+++ b/notebooks/diff_proportions/Compas_With_Diff_Proportions.ipynb
@@ -106,7 +106,7 @@
     "from virny.utils.custom_initializers import create_config_obj\n",
     "from virny.datasets.data_loaders import CompasDataset\n",
     "\n",
-    "from source.error_injectors.sampling import ProportionsGenerator\n",
+    "from source.error_injectors.proportions_sampler import ProportionsSampler\n",
     "from source.user_interfaces.experiment_interface import run_exp_iteration\n",
     "from source.utils.custom_initializers import create_experiment_data_loader\n",
     "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor\n",
@@ -380,7 +380,7 @@
     "    'Caucasian': 0.5,\n",
     "}\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
-    "generator = ProportionsGenerator(experiment_seed, column_for_subsampling, new_proportions_dct)\n",
+    "generator = ProportionsSampler(experiment_seed, column_for_subsampling, new_proportions_dct)\n",
     "\n",
     "custom_table_fields_dct['new_proportions_dct'] = new_proportions_dct\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
