--- a/notebooks/mislabels/Credit_With_Mislabels.ipynb
+++ b/notebooks/mislabels/Credit_With_Mislabels.ipynb
@@ -106,7 +106,7 @@
     "from virny.utils.custom_initializers import create_config_obj\n",
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
-    "from source.error_injectors.measuring import MislabelsGenerator\n",
+    "from source.error_injectors.mislabels_injector import MislabelsInjector\n",
     "from source.user_interfaces.experiment_interface import run_exp_iteration\n",
     "from source.utils.custom_initializers import create_experiment_data_loader\n",
     "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor\n",
@@ -357,13 +357,13 @@
     "exp_iter_num = 1\n",
     "mislabels_pct = 0.1\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
-    "generator = MislabelsGenerator(experiment_seed, mislabels_pct)\n",
+    "injector = MislabelsInjector(experiment_seed, mislabels_pct)\n",
     "\n",
     "custom_table_fields_dct['mislabels_pct'] = mislabels_pct\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "models_params_for_tuning = get_models_params_for_tuning(experiment_seed)\n",
     "# Create a transformed data loader\n",
-    "exp_iter_data_loader = create_experiment_data_loader(data_loader, generator)\n",
+    "exp_iter_data_loader = create_experiment_data_loader(data_loader, injector)\n",
     "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
    ],
    "metadata": {
