--- a/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
+++ b/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
@@ -126,7 +126,7 @@
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
     "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS, TEST_SET_FRACTION\n",
-    "from source.error_injectors.measuring import RandomNullsGenerator\n",
+    "from source.error_injectors.random_nulls_injector import RandomNullsInjector\n",
     "from source.user_interfaces.experiment_interface import run_exp_iteration\n",
     "from source.utils.custom_initializers import create_experiment_data_loader\n",
     "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor"
@@ -426,7 +426,7 @@
     "    'NumberRealEstateLoansOrLines': 0.1,\n",
     "    'NumberOfTime60-89DaysPastDueNotWorse': 0.1,\n",
     "}\n",
-    "generator = RandomNullsGenerator(experiment_seed, columns_nulls_percentage_dct)\n",
+    "generator = RandomNullsInjector(experiment_seed, columns_nulls_percentage_dct)\n",
     "\n",
     "custom_table_fields_dct['preprocessing_technique'] = 'cat: mode, num: median'\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
